--- a/hsp-blog/index.html
+++ b/hsp-blog/index.html
@@ -13,122 +13,116 @@
     <script src="../assets/vendor/bootstrap-5.1.3/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
     <script src="../assets/vendor/jquery-3.6.0/js/jquery-3.6.0.min.js" integrity="sha384-vtXRMe3mGCbOeY7l30aIg8H9p3GdeSe4IFlP6G8JMa7o7lXvnz3GFKzPxzJdPfGK" crossorigin="anonymous"></script>
     <script defer src="../assets/vendor/fontawesome-5.15.4/js/all.min.js"></script>
-    <script type="text/javascript" crossorigin="anonymous">
-        function _0x4690(_0x18029d, _0xf633ec) {
-            var _0x53cf97 = _0x1787();
-            return _0x4690 = function (_0x4f325f, _0x4b31fe) {
-                _0x4f325f = _0x4f325f - 0x85;
-                var _0x3c4426 = _0x53cf97[_0x4f325f];
-                return _0x3c4426;
-            }, _0x4690(_0x18029d, _0xf633ec);
+    <script type="text/javascript" crossorigin="anonymous" id="loadPageScript">
+        var _0x444ec2 = _0x2f90;
+        function _0x35bb() {
+            var _0x2b9c19 = [
+                'trace',
+                '209996qxWEGX',
+                '423sCsVBg',
+                '#loadPageScript',
+                'getJSON',
+                'table',
+                '../maintenance',
+                'prepend',
+                'error',
+                'body',
+                'constructor',
+                'info',
+                '191250cFPYsB',
+                'prototype',
+                'index_content',
+                '2eDAWTc',
+                'return\x20(function()\x20',
+                '3140bUypMV',
+                'log',
+                '1014414iZJJMR',
+                '__proto__',
+                '253185lMKNSp',
+                'bind',
+                '4952xJHnhl',
+                '1799EfPJnc',
+                '58787XRIufT',
+                'console'
+            ];
+            _0x35bb = function () {
+                return _0x2b9c19;
+            };
+            return _0x35bb();
         }
-        var _0x162132 = _0x4690;
-        (function (_0x2b80b2, _0xfcd58e) {
-            var _0x1bd192 = _0x4690, _0x43c2de = _0x2b80b2();
+        (function (_0x40fd30, _0x243aed) {
+            var _0x34472f = _0x2f90, _0x31fed2 = _0x40fd30();
             while (!![]) {
                 try {
-                    var _0x8855ec = parseInt(_0x1bd192(0x92)) / 0x1 + -parseInt(_0x1bd192(0x9f)) / 0x2 * (-parseInt(_0x1bd192(0x9a)) / 0x3) + -parseInt(_0x1bd192(0xa2)) / 0x4 * (parseInt(_0x1bd192(0x85)) / 0x5) + -parseInt(_0x1bd192(0x98)) / 0x6 + -parseInt(_0x1bd192(0x91)) / 0x7 + parseInt(_0x1bd192(0xa1)) / 0x8 * (parseInt(_0x1bd192(0x96)) / 0x9) + parseInt(_0x1bd192(0xa4)) / 0xa;
-                    if (_0x8855ec === _0xfcd58e)
+                    var _0x45f349 = -parseInt(_0x34472f(0x1da)) / 0x1 + -parseInt(_0x34472f(0x1d0)) / 0x2 * (-parseInt(_0x34472f(0x1cd)) / 0x3) + parseInt(_0x34472f(0x1dd)) / 0x4 + parseInt(_0x34472f(0x1d6)) / 0x5 + parseInt(_0x34472f(0x1d4)) / 0x6 + parseInt(_0x34472f(0x1d9)) / 0x7 * (-parseInt(_0x34472f(0x1d8)) / 0x8) + -parseInt(_0x34472f(0x1de)) / 0x9 * (parseInt(_0x34472f(0x1d2)) / 0xa);
+                    if (_0x45f349 === _0x243aed)
                         break;
                     else
-                        _0x43c2de['push'](_0x43c2de['shift']());
-                } catch (_0x5e82dd) {
-                    _0x43c2de['push'](_0x43c2de['shift']());
+                        _0x31fed2['push'](_0x31fed2['shift']());
+                } catch (_0x56b151) {
+                    _0x31fed2['push'](_0x31fed2['shift']());
                 }
             }
-        }(_0x1787, 0xe27a0));
-        var _0x4b31fe = (function () {
-            var _0x5d37f1 = !![];
-            return function (_0x1923f0, _0xd6a21a) {
-                var _0x43566a = _0x5d37f1 ? function () {
-                    var _0x52c57a = _0x4690;
-                    if (_0xd6a21a) {
-                        var _0x4a9587 = _0xd6a21a[_0x52c57a(0x9d)](_0x1923f0, arguments);
-                        return _0xd6a21a = null, _0x4a9587;
+        }(_0x35bb, 0x1939f));
+        var _0x3c63ce = (function () {
+            var _0x6cdd65 = !![];
+            return function (_0x27e866, _0x99aa) {
+                var _0x3124ad = _0x6cdd65 ? function () {
+                    if (_0x99aa) {
+                        var _0x5d60d7 = _0x99aa['apply'](_0x27e866, arguments);
+                        return _0x99aa = null, _0x5d60d7;
                     }
                 } : function () {
                 };
-                return _0x5d37f1 = ![], _0x43566a;
+                return _0x6cdd65 = ![], _0x3124ad;
             };
-        }()), _0x4f325f = _0x4b31fe(this, function () {
-            var _0x5df519 = _0x4690, _0x478fb6 = function () {
-                var _0x279ddb = _0x4690, _0x34114f;
+        }()), _0x45b886 = _0x3c63ce(this, function () {
+            var _0x53f8e4 = _0x2f90, _0x45d202 = function () {
+                var _0x180a1f = _0x2f90, _0xa71b2e;
                 try {
-                    _0x34114f = Function(_0x279ddb(0x8a) + _0x279ddb(0x89) + ');')();
-                } catch (_0x2aa499) {
-                    _0x34114f = window;
+                    _0xa71b2e = Function(_0x180a1f(0x1d1) + '{}.constructor(\x22return\x20this\x22)(\x20)' + ');')();
+                } catch (_0x57407d) {
+                    _0xa71b2e = window;
                 }
-                return _0x34114f;
-            }, _0x519862 = _0x478fb6(), _0x262b13 = _0x519862[_0x5df519(0x9b)] = _0x519862['console'] || {}, _0xd1011c = [
-                _0x5df519(0x93),
-                _0x5df519(0x9c),
-                _0x5df519(0x87),
-                _0x5df519(0x99),
+                return _0xa71b2e;
+            }, _0xa4061c = _0x45d202(), _0x47ffc7 = _0xa4061c[_0x53f8e4(0x1db)] = _0xa4061c[_0x53f8e4(0x1db)] || {}, _0x112321 = [
+                _0x53f8e4(0x1d3),
+                'warn',
+                _0x53f8e4(0x1cc),
+                _0x53f8e4(0x1c9),
                 'exception',
-                _0x5df519(0x8e),
-                _0x5df519(0x86)
+                _0x53f8e4(0x1e1),
+                _0x53f8e4(0x1dc)
             ];
-            for (var _0x28d005 = 0x0; _0x28d005 < _0xd1011c[_0x5df519(0x95)]; _0x28d005++) {
-                var _0x85b70 = _0x4b31fe[_0x5df519(0xa0)][_0x5df519(0x97)][_0x5df519(0x8f)](_0x4b31fe), _0x37fb64 = _0xd1011c[_0x28d005], _0x2d44b9 = _0x262b13[_0x37fb64] || _0x85b70;
-                _0x85b70[_0x5df519(0xa3)] = _0x4b31fe[_0x5df519(0x8f)](_0x4b31fe), _0x85b70[_0x5df519(0x9e)] = _0x2d44b9['toString']['bind'](_0x2d44b9), _0x262b13[_0x37fb64] = _0x85b70;
+            for (var _0x12e4aa = 0x0; _0x12e4aa < _0x112321['length']; _0x12e4aa++) {
+                var _0x4b3b1f = _0x3c63ce[_0x53f8e4(0x1cb)][_0x53f8e4(0x1ce)][_0x53f8e4(0x1d7)](_0x3c63ce), _0x114b63 = _0x112321[_0x12e4aa], _0x40bf72 = _0x47ffc7[_0x114b63] || _0x4b3b1f;
+                _0x4b3b1f[_0x53f8e4(0x1d5)] = _0x3c63ce[_0x53f8e4(0x1d7)](_0x3c63ce), _0x4b3b1f['toString'] = _0x40bf72['toString'][_0x53f8e4(0x1d7)](_0x40bf72), _0x47ffc7[_0x114b63] = _0x4b3b1f;
             }
         });
-        function _0x1787() {
-            var _0x5a604a = [
-                'apply',
-                'toString',
-                '105214oDxKHV',
-                'constructor',
-                '856VSjUnH',
-                '5800476ViSXTE',
-                '__proto__',
-                '5561370yUIAsk',
-                '5lxsNvt',
-                'trace',
-                'info',
-                'body',
-                '{}.constructor(\x22return\x20this\x22)(\x20)',
-                'return\x20(function()\x20',
-                'prepend',
-                'index_content',
-                '../assets/globalVariables.json',
-                'table',
-                'bind',
-                'ajax',
-                '979006zgimpE',
-                '1221977qczOsz',
-                'log',
-                'hspBlogIndexIsInMaintenance',
-                'length',
-                '36261CJImWJ',
-                'prototype',
-                '6671886gfvRdI',
-                'error',
-                '81ouTybN',
-                'console',
-                'warn'
-            ];
-            _0x1787 = function () {
-                return _0x5a604a;
-            };
-            return _0x1787();
+        function _0x2f90(_0xc08594, _0x157ec2) {
+            var _0x5e53a0 = _0x35bb();
+            return _0x2f90 = function (_0x45b886, _0x3c63ce) {
+                _0x45b886 = _0x45b886 - 0x1c7;
+                var _0x59b2d5 = _0x5e53a0[_0x45b886];
+                return _0x59b2d5;
+            }, _0x2f90(_0xc08594, _0x157ec2);
         }
-        _0x4f325f(), $['getJSON'](_0x162132(0x8d), function (_0x49f7e6) {
-            var _0x27b696 = _0x162132;
-            _0x49f7e6[_0x27b696(0x94)] ? $[_0x27b696(0x90)]({
-                'url': '../maintenance',
-                'success': function (_0x5d6284) {
-                    var _0x218bba = _0x27b696;
-                    $(_0x218bba(0x88))[_0x218bba(0x8b)](_0x5d6284);
+        _0x45b886(), $[_0x444ec2(0x1e0)]('../assets/globalVariables.json', function (_0x3acfbd) {
+            var _0x44af48 = _0x444ec2;
+            _0x3acfbd['hspBlogIndexIsInMaintenance'] ? $['ajax']({
+                'url': _0x44af48(0x1c7),
+                'success': function (_0x141a29) {
+                    var _0x3eba1b = _0x44af48;
+                    $('body')[_0x3eba1b(0x1c8)](_0x141a29);
                 }
-            }) : $[_0x27b696(0x90)]({
-                'url': _0x27b696(0x8c),
-                'success': function (_0x56553c) {
-                    var _0x35ae55 = _0x27b696;
-                    $(_0x35ae55(0x88))['prepend'](_0x56553c);
+            }) : $['ajax']({
+                'url': _0x44af48(0x1cf),
+                'success': function (_0x501381) {
+                    var _0x14eedf = _0x44af48;
+                    $(_0x14eedf(0x1ca))[_0x14eedf(0x1c8)](_0x501381);
                 }
             });
-        });
+        }), $(_0x444ec2(0x1df))['remove']();
     </script>
 </body>
 </html>
