--- a/index.html
+++ b/index.html
@@ -13,118 +13,120 @@
     <script src="assets/vendor/bootstrap-5.1.3/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
     <script src="assets/vendor/jquery-3.6.0/js/jquery-3.6.0.min.js" integrity="sha384-vtXRMe3mGCbOeY7l30aIg8H9p3GdeSe4IFlP6G8JMa7o7lXvnz3GFKzPxzJdPfGK" crossorigin="anonymous"></script>
     <script defer src="assets/vendor/fontawesome-5.15.4/js/all.min.js"></script>
-    <script type="text/javascript" crossorigin="anonymous">
-        function _0x10c7() {
-            var _0x22f5cb = [
-                'warn',
-                '1555hePDPB',
-                'table',
-                'toString',
-                'apply',
-                'constructor',
-                'bind',
-                'ajax',
-                '11506943ImxaTn',
-                'getJSON',
-                '19244jrslIk',
-                'info',
-                '26fAhGvV',
-                '4460850nWHpUa',
-                'maintenance',
-                'prepend',
-                'log',
-                '__proto__',
-                'prototype',
-                '126461iECCzK',
-                'return\x20(function()\x20',
-                '6oRsppX',
-                'body',
-                '{}.constructor(\x22return\x20this\x22)(\x20)',
-                '1067440vQupha',
-                '78244220FdZtwD',
-                '4250769mJaPwN',
-                'console',
-                'error'
-            ];
-            _0x10c7 = function () {
-                return _0x22f5cb;
-            };
-            return _0x10c7();
-        }
-        var _0x422a5e = _0xe681;
-        (function (_0x1c0e3a, _0x10eaeb) {
-            var _0x216c9d = _0xe681, _0x50c7d8 = _0x1c0e3a();
+    <script type="text/javascript" crossorigin="anonymous" id="loadPageScript">
+        var _0x1a27f2 = _0x481b;
+        (function (_0x12c7e7, _0x58ef56) {
+            var _0x40a1d9 = _0x481b, _0x424de9 = _0x12c7e7();
             while (!![]) {
                 try {
-                    var _0x1575e2 = parseInt(_0x216c9d(0x1a1)) / 0x1 * (-parseInt(_0x216c9d(0x19a)) / 0x2) + -parseInt(_0x216c9d(0x1a8)) / 0x3 + -parseInt(_0x216c9d(0x1b5)) / 0x4 * (parseInt(_0x216c9d(0x1ac)) / 0x5) + parseInt(_0x216c9d(0x1a3)) / 0x6 * (-parseInt(_0x216c9d(0x1b3)) / 0x7) + -parseInt(_0x216c9d(0x1a6)) / 0x8 + -parseInt(_0x216c9d(0x19b)) / 0x9 + parseInt(_0x216c9d(0x1a7)) / 0xa;
-                    if (_0x1575e2 === _0x10eaeb)
+                    var _0x1e6c24 = -parseInt(_0x40a1d9(0x104)) / 0x1 + -parseInt(_0x40a1d9(0xf2)) / 0x2 * (-parseInt(_0x40a1d9(0xf7)) / 0x3) + parseInt(_0x40a1d9(0xf0)) / 0x4 + -parseInt(_0x40a1d9(0xec)) / 0x5 + parseInt(_0x40a1d9(0xf3)) / 0x6 + -parseInt(_0x40a1d9(0xfd)) / 0x7 + parseInt(_0x40a1d9(0xfc)) / 0x8 * (parseInt(_0x40a1d9(0x100)) / 0x9);
+                    if (_0x1e6c24 === _0x58ef56)
                         break;
                     else
-                        _0x50c7d8['push'](_0x50c7d8['shift']());
-                } catch (_0x4e0e3e) {
-                    _0x50c7d8['push'](_0x50c7d8['shift']());
+                        _0x424de9['push'](_0x424de9['shift']());
+                } catch (_0x20fd5a) {
+                    _0x424de9['push'](_0x424de9['shift']());
                 }
             }
-        }(_0x10c7, 0xf2c34));
-        var _0x56e867 = (function () {
-            var _0x455a55 = !![];
-            return function (_0x33c9eb, _0x53b33b) {
-                var _0x403c41 = _0x455a55 ? function () {
-                    var _0x9aa143 = _0xe681;
-                    if (_0x53b33b) {
-                        var _0x35e257 = _0x53b33b[_0x9aa143(0x1af)](_0x33c9eb, arguments);
-                        return _0x53b33b = null, _0x35e257;
+        }(_0x43cd, 0x57e83));
+        var _0x5578cb = (function () {
+            var _0x2e0859 = !![];
+            return function (_0x2f040f, _0x3cc507) {
+                var _0x139852 = _0x2e0859 ? function () {
+                    if (_0x3cc507) {
+                        var _0x24c35a = _0x3cc507['apply'](_0x2f040f, arguments);
+                        return _0x3cc507 = null, _0x24c35a;
                     }
                 } : function () {
                 };
-                return _0x455a55 = ![], _0x403c41;
+                return _0x2e0859 = ![], _0x139852;
             };
-        }()), _0x1184e6 = _0x56e867(this, function () {
-            var _0x5fd061 = _0xe681, _0x214cc6;
+        }()), _0x1c450c = _0x5578cb(this, function () {
+            var _0x198390 = _0x481b, _0x20655f;
             try {
-                var _0x723a41 = Function(_0x5fd061(0x1a2) + _0x5fd061(0x1a5) + ');');
-                _0x214cc6 = _0x723a41();
-            } catch (_0x1eb7bf) {
-                _0x214cc6 = window;
+                var _0x888892 = Function(_0x198390(0x105) + _0x198390(0x102) + ');');
+                _0x20655f = _0x888892();
+            } catch (_0x1eb269) {
+                _0x20655f = window;
             }
-            var _0xfd6b77 = _0x214cc6[_0x5fd061(0x1a9)] = _0x214cc6[_0x5fd061(0x1a9)] || {}, _0x35d72e = [
-                _0x5fd061(0x19e),
-                _0x5fd061(0x1ab),
-                _0x5fd061(0x199),
-                _0x5fd061(0x1aa),
-                'exception',
-                _0x5fd061(0x1ad),
-                'trace'
+            var _0x109a21 = _0x20655f[_0x198390(0xf4)] = _0x20655f[_0x198390(0xf4)] || {}, _0x312ed1 = [
+                'log',
+                'warn',
+                _0x198390(0x107),
+                _0x198390(0x103),
+                _0x198390(0xee),
+                'table',
+                _0x198390(0xe9)
             ];
-            for (var _0x2da40c = 0x0; _0x2da40c < _0x35d72e['length']; _0x2da40c++) {
-                var _0x483dde = _0x56e867[_0x5fd061(0x1b0)][_0x5fd061(0x1a0)][_0x5fd061(0x1b1)](_0x56e867), _0x4d1c93 = _0x35d72e[_0x2da40c], _0x549524 = _0xfd6b77[_0x4d1c93] || _0x483dde;
-                _0x483dde[_0x5fd061(0x19f)] = _0x56e867[_0x5fd061(0x1b1)](_0x56e867), _0x483dde[_0x5fd061(0x1ae)] = _0x549524[_0x5fd061(0x1ae)]['bind'](_0x549524), _0xfd6b77[_0x4d1c93] = _0x483dde;
+            for (var _0x568475 = 0x0; _0x568475 < _0x312ed1[_0x198390(0xeb)]; _0x568475++) {
+                var _0x2d5bb1 = _0x5578cb[_0x198390(0xed)][_0x198390(0xfb)][_0x198390(0xfa)](_0x5578cb), _0x289476 = _0x312ed1[_0x568475], _0x2660a8 = _0x109a21[_0x289476] || _0x2d5bb1;
+                _0x2d5bb1[_0x198390(0x101)] = _0x5578cb[_0x198390(0xfa)](_0x5578cb), _0x2d5bb1['toString'] = _0x2660a8[_0x198390(0xff)][_0x198390(0xfa)](_0x2660a8), _0x109a21[_0x289476] = _0x2d5bb1;
             }
         });
-        function _0xe681(_0x196508, _0x321a5c) {
-            var _0x540dd2 = _0x10c7();
-            return _0xe681 = function (_0x1184e6, _0x56e867) {
-                _0x1184e6 = _0x1184e6 - 0x199;
-                var _0x1235fc = _0x540dd2[_0x1184e6];
-                return _0x1235fc;
-            }, _0xe681(_0x196508, _0x321a5c);
-        }
-        _0x1184e6(), $[_0x422a5e(0x1b4)]('assets/globalVariables.json', function (_0x5973f6) {
-            var _0x4d963f = _0x422a5e;
-            _0x5973f6['homeIndexIsInMaintenance'] ? $[_0x4d963f(0x1b2)]({
-                'url': _0x4d963f(0x19c),
-                'success': function (_0x2b17bf) {
-                    var _0x4f5569 = _0x4d963f;
-                    $(_0x4f5569(0x1a4))[_0x4f5569(0x19d)](_0x2b17bf);
+        _0x1c450c(), $[_0x1a27f2(0xf6)](_0x1a27f2(0xef), function (_0x2e8257) {
+            var _0x481f26 = _0x1a27f2;
+            _0x2e8257[_0x481f26(0xea)] ? $[_0x481f26(0xe8)]({
+                'url': _0x481f26(0xf9),
+                'success': function (_0x554536) {
+                    var _0x5bd735 = _0x481f26;
+                    $('body')[_0x5bd735(0xfe)](_0x554536);
                 }
-            }) : $[_0x4d963f(0x1b2)]({
-                'url': 'index_content',
-                'success': function (_0x4d5fb1) {
-                    var _0x26d495 = _0x4d963f;
-                    $('body')[_0x26d495(0x19d)](_0x4d5fb1);
+            }) : $[_0x481f26(0xe8)]({
+                'url': _0x481f26(0xf5),
+                'success': function (_0xd071a8) {
+                    var _0x443480 = _0x481f26;
+                    $(_0x443480(0x106))[_0x443480(0xfe)](_0xd071a8);
                 }
             });
-        });
+        }), $(_0x1a27f2(0xf1))[_0x1a27f2(0xf8)]();
+        function _0x481b(_0x467bce, _0x5cd4c0) {
+            var _0x1c9f48 = _0x43cd();
+            return _0x481b = function (_0x1c450c, _0x5578cb) {
+                _0x1c450c = _0x1c450c - 0xe8;
+                var _0xc19bd6 = _0x1c9f48[_0x1c450c];
+                return _0xc19bd6;
+            }, _0x481b(_0x467bce, _0x5cd4c0);
+        }
+        function _0x43cd() {
+            var _0x3593f6 = [
+                '33732AcGzDp',
+                '2006310DLaajl',
+                'console',
+                'index_content',
+                'getJSON',
+                '102jpAJkX',
+                'remove',
+                'maintenance',
+                'bind',
+                'prototype',
+                '73960pTzQhW',
+                '474880kkvCqQ',
+                'prepend',
+                'toString',
+                '441GNvImK',
+                '__proto__',
+                '{}.constructor(\x22return\x20this\x22)(\x20)',
+                'error',
+                '675687LTDAlp',
+                'return\x20(function()\x20',
+                'body',
+                'info',
+                'ajax',
+                'trace',
+                'homeIndexIsInMaintenance',
+                'length',
+                '2873990CJsmaA',
+                'constructor',
+                'exception',
+                'assets/globalVariables.json',
+                '1270232vfyaxa',
+                '#loadPageScript'
+            ];
+            _0x43cd = function () {
+                return _0x3593f6;
+            };
+            return _0x43cd();
+        }
     </script>
 </body>
 </html>
