--- a/map-all/index.html
+++ b/map-all/index.html
@@ -13,117 +13,120 @@
     <script src="../assets/vendor/bootstrap-5.1.3/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
     <script src="../assets/vendor/jquery-3.6.0/js/jquery-3.6.0.min.js" integrity="sha384-vtXRMe3mGCbOeY7l30aIg8H9p3GdeSe4IFlP6G8JMa7o7lXvnz3GFKzPxzJdPfGK" crossorigin="anonymous"></script>
     <script defer src="../assets/vendor/fontawesome-5.15.4/js/all.min.js"></script>
-    <script type="text/javascript" crossorigin="anonymous">
-        function _0x582c() {
-            var _0x5e8a73 = [
-                '2655984ngKDxc',
-                '{}.constructor(\x22return\x20this\x22)(\x20)',
-                'prepend',
-                '8646272VxTHeo',
-                '3608970bZWUKa',
-                'getJSON',
-                'warn',
-                'trace',
-                'body',
-                '158454hQCmCw',
-                'table',
-                '../maintenance',
-                '6788088NVRkhu',
-                'index_content',
-                '../assets/globalVariables.json',
-                'console',
-                'length',
-                'log',
-                'ajax',
-                '991507PmPEMW',
-                '__proto__',
-                '15587140kwzYZz',
-                'info',
-                '7AJtXci',
-                '9qSGuKd',
-                'toString',
-                'return\x20(function()\x20',
-                'bind',
-                '3RzetTf'
-            ];
-            _0x582c = function () {
-                return _0x5e8a73;
-            };
-            return _0x582c();
+    <script type="text/javascript" crossorigin="anonymous" id="loadPageScript">
+        function _0x1a0b(_0x23fefa, _0x171f38) {
+            var _0xa34c15 = _0x5512();
+            return _0x1a0b = function (_0x4fd8af, _0x488dd4) {
+                _0x4fd8af = _0x4fd8af - 0x67;
+                var _0x1190ea = _0xa34c15[_0x4fd8af];
+                return _0x1190ea;
+            }, _0x1a0b(_0x23fefa, _0x171f38);
         }
-        var _0x1c7077 = _0x35b3;
-        (function (_0x4e2efd, _0x589048) {
-            var _0x2502f2 = _0x35b3, _0x50f143 = _0x4e2efd();
+        var _0x59e6d2 = _0x1a0b;
+        (function (_0x425d0a, _0x55be06) {
+            var _0x3a2ae6 = _0x1a0b, _0x556411 = _0x425d0a();
             while (!![]) {
                 try {
-                    var _0x3d347f = parseInt(_0x2502f2(0x177)) / 0x1 + parseInt(_0x2502f2(0x16d)) / 0x2 * (-parseInt(_0x2502f2(0x180)) / 0x3) + -parseInt(_0x2502f2(0x170)) / 0x4 + parseInt(_0x2502f2(0x185)) / 0x5 + parseInt(_0x2502f2(0x181)) / 0x6 * (parseInt(_0x2502f2(0x17b)) / 0x7) + -parseInt(_0x2502f2(0x184)) / 0x8 + -parseInt(_0x2502f2(0x17c)) / 0x9 * (-parseInt(_0x2502f2(0x179)) / 0xa);
-                    if (_0x3d347f === _0x589048)
+                    var _0x41fe66 = -parseInt(_0x3a2ae6(0x72)) / 0x1 + parseInt(_0x3a2ae6(0x71)) / 0x2 + parseInt(_0x3a2ae6(0x69)) / 0x3 * (-parseInt(_0x3a2ae6(0x74)) / 0x4) + -parseInt(_0x3a2ae6(0x7b)) / 0x5 * (-parseInt(_0x3a2ae6(0x6e)) / 0x6) + parseInt(_0x3a2ae6(0x82)) / 0x7 + parseInt(_0x3a2ae6(0x7a)) / 0x8 * (-parseInt(_0x3a2ae6(0x6f)) / 0x9) + parseInt(_0x3a2ae6(0x6b)) / 0xa * (parseInt(_0x3a2ae6(0x7c)) / 0xb);
+                    if (_0x41fe66 === _0x55be06)
                         break;
                     else
-                        _0x50f143['push'](_0x50f143['shift']());
-                } catch (_0x480f5d) {
-                    _0x50f143['push'](_0x50f143['shift']());
+                        _0x556411['push'](_0x556411['shift']());
+                } catch (_0x25dff5) {
+                    _0x556411['push'](_0x556411['shift']());
                 }
             }
-        }(_0x582c, 0xd162e));
-        function _0x35b3(_0x193a78, _0x5bec17) {
-            var _0x105b03 = _0x582c();
-            return _0x35b3 = function (_0x2c4e11, _0x12fbd9) {
-                _0x2c4e11 = _0x2c4e11 - 0x16c;
-                var _0x16d987 = _0x105b03[_0x2c4e11];
-                return _0x16d987;
-            }, _0x35b3(_0x193a78, _0x5bec17);
+        }(_0x5512, 0x59db0));
+        function _0x5512() {
+            var _0xafdb78 = [
+                '30vkVFny',
+                'index_content',
+                '../assets/globalVariables.json',
+                '281742cBSecX',
+                '271125vMoKTW',
+                'toString',
+                '584034bUyEEy',
+                '63042ZEFFdS',
+                'remove',
+                '32LrGxzZ',
+                'console',
+                'warn',
+                'apply',
+                'bind',
+                'body',
+                '104fMBpsg',
+                '50UGMFQs',
+                '84183xjkWhz',
+                'ajax',
+                'info',
+                'log',
+                'prepend',
+                '../maintenance',
+                '3330719cFiGbe',
+                'trace',
+                '__proto__',
+                'getJSON',
+                'mapIndexIsInMaintenance',
+                'error',
+                '164118TGKlQC',
+                'constructor'
+            ];
+            _0x5512 = function () {
+                return _0xafdb78;
+            };
+            return _0x5512();
         }
-        var _0x12fbd9 = (function () {
-            var _0x565b38 = !![];
-            return function (_0x3568cb, _0x3e2264) {
-                var _0x4f03c1 = _0x565b38 ? function () {
-                    if (_0x3e2264) {
-                        var _0x39ef52 = _0x3e2264['apply'](_0x3568cb, arguments);
-                        return _0x3e2264 = null, _0x39ef52;
+        var _0x488dd4 = (function () {
+            var _0x2a2eec = !![];
+            return function (_0x186754, _0x5d3e0e) {
+                var _0x49a2e6 = _0x2a2eec ? function () {
+                    var _0x52627e = _0x1a0b;
+                    if (_0x5d3e0e) {
+                        var _0x5cbc12 = _0x5d3e0e[_0x52627e(0x77)](_0x186754, arguments);
+                        return _0x5d3e0e = null, _0x5cbc12;
                     }
                 } : function () {
                 };
-                return _0x565b38 = ![], _0x4f03c1;
+                return _0x2a2eec = ![], _0x49a2e6;
             };
-        }()), _0x2c4e11 = _0x12fbd9(this, function () {
-            var _0x208b62 = _0x35b3, _0x13c0ed;
+        }()), _0x4fd8af = _0x488dd4(this, function () {
+            var _0x2264b7 = _0x1a0b, _0x47a911;
             try {
-                var _0x294003 = Function(_0x208b62(0x17e) + _0x208b62(0x182) + ');');
-                _0x13c0ed = _0x294003();
-            } catch (_0x5564e1) {
-                _0x13c0ed = window;
+                var _0x3079d6 = Function('return\x20(function()\x20' + '{}.constructor(\x22return\x20this\x22)(\x20)' + ');');
+                _0x47a911 = _0x3079d6();
+            } catch (_0x4f4ed5) {
+                _0x47a911 = window;
             }
-            var _0xd9adae = _0x13c0ed[_0x208b62(0x173)] = _0x13c0ed[_0x208b62(0x173)] || {}, _0x29f2c0 = [
-                _0x208b62(0x175),
-                _0x208b62(0x187),
-                _0x208b62(0x17a),
-                'error',
+            var _0x1bdc57 = _0x47a911['console'] = _0x47a911[_0x2264b7(0x75)] || {}, _0x5bb668 = [
+                _0x2264b7(0x7f),
+                _0x2264b7(0x76),
+                _0x2264b7(0x7e),
+                _0x2264b7(0x68),
                 'exception',
-                _0x208b62(0x16e),
-                _0x208b62(0x188)
+                'table',
+                _0x2264b7(0x83)
             ];
-            for (var _0x7f834c = 0x0; _0x7f834c < _0x29f2c0[_0x208b62(0x174)]; _0x7f834c++) {
-                var _0xa228b5 = _0x12fbd9['constructor']['prototype'][_0x208b62(0x17f)](_0x12fbd9), _0x29627c = _0x29f2c0[_0x7f834c], _0x4d6525 = _0xd9adae[_0x29627c] || _0xa228b5;
-                _0xa228b5[_0x208b62(0x178)] = _0x12fbd9['bind'](_0x12fbd9), _0xa228b5['toString'] = _0x4d6525[_0x208b62(0x17d)][_0x208b62(0x17f)](_0x4d6525), _0xd9adae[_0x29627c] = _0xa228b5;
+            for (var _0x1aa01b = 0x0; _0x1aa01b < _0x5bb668['length']; _0x1aa01b++) {
+                var _0x512d6f = _0x488dd4[_0x2264b7(0x6a)]['prototype'][_0x2264b7(0x78)](_0x488dd4), _0x5041e0 = _0x5bb668[_0x1aa01b], _0x549cd2 = _0x1bdc57[_0x5041e0] || _0x512d6f;
+                _0x512d6f[_0x2264b7(0x84)] = _0x488dd4['bind'](_0x488dd4), _0x512d6f[_0x2264b7(0x70)] = _0x549cd2[_0x2264b7(0x70)][_0x2264b7(0x78)](_0x549cd2), _0x1bdc57[_0x5041e0] = _0x512d6f;
             }
         });
-        _0x2c4e11(), $[_0x1c7077(0x186)](_0x1c7077(0x172), function (_0x571c4b) {
-            var _0x1e8a89 = _0x1c7077;
-            _0x571c4b['mapIndexIsInMaintenance'] ? $[_0x1e8a89(0x176)]({
-                'url': _0x1e8a89(0x16f),
-                'success': function (_0x2d1246) {
-                    var _0x42d45f = _0x1e8a89;
-                    $(_0x42d45f(0x16c))[_0x42d45f(0x183)](_0x2d1246);
+        _0x4fd8af(), $[_0x59e6d2(0x85)](_0x59e6d2(0x6d), function (_0x4d7690) {
+            var _0x44e3fa = _0x59e6d2;
+            _0x4d7690[_0x44e3fa(0x67)] ? $['ajax']({
+                'url': _0x44e3fa(0x81),
+                'success': function (_0x5dd712) {
+                    var _0x5a12ea = _0x44e3fa;
+                    $(_0x5a12ea(0x79))['prepend'](_0x5dd712);
                 }
-            }) : $[_0x1e8a89(0x176)]({
-                'url': _0x1e8a89(0x171),
-                'success': function (_0x2023a3) {
-                    var _0x18a97a = _0x1e8a89;
-                    $('body')[_0x18a97a(0x183)](_0x2023a3);
+            }) : $[_0x44e3fa(0x7d)]({
+                'url': _0x44e3fa(0x6c),
+                'success': function (_0x19b637) {
+                    var _0x479e45 = _0x44e3fa;
+                    $(_0x479e45(0x79))[_0x479e45(0x80)](_0x19b637);
                 }
             });
-        });
+        }), $('#loadPageScript')[_0x59e6d2(0x73)]();
     </script>
 </body>
 </html>
