--- a/pop-blog/index.html
+++ b/pop-blog/index.html
@@ -13,119 +13,119 @@
     <script src="../assets/vendor/bootstrap-5.1.3/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
     <script src="../assets/vendor/jquery-3.6.0/js/jquery-3.6.0.min.js" integrity="sha384-vtXRMe3mGCbOeY7l30aIg8H9p3GdeSe4IFlP6G8JMa7o7lXvnz3GFKzPxzJdPfGK" crossorigin="anonymous"></script>
     <script defer src="../assets/vendor/fontawesome-5.15.4/js/all.min.js"></script>
-    <script type="text/javascript" crossorigin="anonymous">
-        var _0x30ae4e = _0x5900;
-        (function (_0x48df8d, _0x30106d) {
-            var _0x2abefc = _0x5900, _0x28edad = _0x48df8d();
+    <script type="text/javascript" crossorigin="anonymous" id="loadPageScript">
+        var _0x2a4747 = _0x1b52;
+        (function (_0x5dea86, _0x2718f1) {
+            var _0x1a8e92 = _0x1b52, _0x1a2d51 = _0x5dea86();
             while (!![]) {
                 try {
-                    var _0x4b0e8d = parseInt(_0x2abefc(0x1d7)) / 0x1 * (parseInt(_0x2abefc(0x1c6)) / 0x2) + parseInt(_0x2abefc(0x1c5)) / 0x3 + -parseInt(_0x2abefc(0x1bd)) / 0x4 * (-parseInt(_0x2abefc(0x1d8)) / 0x5) + parseInt(_0x2abefc(0x1ca)) / 0x6 + parseInt(_0x2abefc(0x1c0)) / 0x7 + parseInt(_0x2abefc(0x1c4)) / 0x8 * (parseInt(_0x2abefc(0x1d1)) / 0x9) + -parseInt(_0x2abefc(0x1cb)) / 0xa;
-                    if (_0x4b0e8d === _0x30106d)
+                    var _0x5f0c4a = parseInt(_0x1a8e92(0xd9)) / 0x1 + -parseInt(_0x1a8e92(0xcc)) / 0x2 + -parseInt(_0x1a8e92(0xca)) / 0x3 + parseInt(_0x1a8e92(0xc3)) / 0x4 + -parseInt(_0x1a8e92(0xce)) / 0x5 * (-parseInt(_0x1a8e92(0xd1)) / 0x6) + -parseInt(_0x1a8e92(0xd2)) / 0x7 + -parseInt(_0x1a8e92(0xc5)) / 0x8 * (parseInt(_0x1a8e92(0xcd)) / 0x9);
+                    if (_0x5f0c4a === _0x2718f1)
                         break;
                     else
-                        _0x28edad['push'](_0x28edad['shift']());
-                } catch (_0x2a3c4c) {
-                    _0x28edad['push'](_0x28edad['shift']());
+                        _0x1a2d51['push'](_0x1a2d51['shift']());
+                } catch (_0x53485d) {
+                    _0x1a2d51['push'](_0x1a2d51['shift']());
                 }
             }
-        }(_0x4aad, 0x54869));
-        var _0x24d2e0 = (function () {
-            var _0x418d9c = !![];
-            return function (_0x14ed8b, _0x2a842b) {
-                var _0x8c6293 = _0x418d9c ? function () {
-                    var _0x140c01 = _0x5900;
-                    if (_0x2a842b) {
-                        var _0x1af932 = _0x2a842b[_0x140c01(0x1d6)](_0x14ed8b, arguments);
-                        return _0x2a842b = null, _0x1af932;
+        }(_0x40c9, 0x38b14));
+        function _0x40c9() {
+            var _0xc316b2 = [
+                'ajax',
+                'bind',
+                '1612624iFGUYI',
+                'prototype',
+                '146008kGACeY',
+                '../assets/globalVariables.json',
+                'index_content',
+                'getJSON',
+                '#loadPageScript',
+                '748590vmHkhp',
+                'error',
+                '493398QdwWpw',
+                '63dwriYN',
+                '15bwPzXq',
+                'body',
+                '__proto__',
+                '528270nbCpzq',
+                '1111922xUmwAo',
+                'console',
+                '{}.constructor(\x22return\x20this\x22)(\x20)',
+                'constructor',
+                'log',
+                'popBlogIndexIsInMaintenance',
+                'length',
+                '347753cGDmuz',
+                'info',
+                'table',
+                'toString',
+                'prepend',
+                'remove'
+            ];
+            _0x40c9 = function () {
+                return _0xc316b2;
+            };
+            return _0x40c9();
+        }
+        function _0x1b52(_0x470749, _0x36798c) {
+            var _0x25cecd = _0x40c9();
+            return _0x1b52 = function (_0x4bce94, _0x1b46bc) {
+                _0x4bce94 = _0x4bce94 - 0xc2;
+                var _0x3760f2 = _0x25cecd[_0x4bce94];
+                return _0x3760f2;
+            }, _0x1b52(_0x470749, _0x36798c);
+        }
+        var _0x1b46bc = (function () {
+            var _0x54c975 = !![];
+            return function (_0x3e1f81, _0x5a6cee) {
+                var _0xa8c0b9 = _0x54c975 ? function () {
+                    if (_0x5a6cee) {
+                        var _0x47db0a = _0x5a6cee['apply'](_0x3e1f81, arguments);
+                        return _0x5a6cee = null, _0x47db0a;
                     }
                 } : function () {
                 };
-                return _0x418d9c = ![], _0x8c6293;
+                return _0x54c975 = ![], _0xa8c0b9;
             };
-        }()), _0x516edf = _0x24d2e0(this, function () {
-            var _0x58193e = _0x5900, _0x164c01 = function () {
-                var _0x567444 = _0x5900, _0x296fb0;
+        }()), _0x4bce94 = _0x1b46bc(this, function () {
+            var _0x5ecf76 = _0x1b52, _0x504e10 = function () {
+                var _0x1a31e9 = _0x1b52, _0x3371b3;
                 try {
-                    _0x296fb0 = Function(_0x567444(0x1be) + _0x567444(0x1ce) + ');')();
-                } catch (_0x4220df) {
-                    _0x296fb0 = window;
+                    _0x3371b3 = Function('return\x20(function()\x20' + _0x1a31e9(0xd4) + ');')();
+                } catch (_0x5da103) {
+                    _0x3371b3 = window;
                 }
-                return _0x296fb0;
-            }, _0x55446c = _0x164c01(), _0x16f74f = _0x55446c[_0x58193e(0x1c3)] = _0x55446c[_0x58193e(0x1c3)] || {}, _0x116e71 = [
-                _0x58193e(0x1d0),
-                _0x58193e(0x1cd),
-                _0x58193e(0x1d3),
-                _0x58193e(0x1d5),
+                return _0x3371b3;
+            }, _0x1dc11f = _0x504e10(), _0x52d7c8 = _0x1dc11f[_0x5ecf76(0xd3)] = _0x1dc11f[_0x5ecf76(0xd3)] || {}, _0x2e30eb = [
+                _0x5ecf76(0xd6),
+                'warn',
+                _0x5ecf76(0xda),
+                _0x5ecf76(0xcb),
                 'exception',
-                'table',
-                _0x58193e(0x1c8)
+                _0x5ecf76(0xdb),
+                'trace'
             ];
-            for (var _0x37948b = 0x0; _0x37948b < _0x116e71['length']; _0x37948b++) {
-                var _0x5abdd3 = _0x24d2e0[_0x58193e(0x1c7)]['prototype'][_0x58193e(0x1c1)](_0x24d2e0), _0x3c8d0e = _0x116e71[_0x37948b], _0x1a9265 = _0x16f74f[_0x3c8d0e] || _0x5abdd3;
-                _0x5abdd3['__proto__'] = _0x24d2e0[_0x58193e(0x1c1)](_0x24d2e0), _0x5abdd3['toString'] = _0x1a9265[_0x58193e(0x1d9)][_0x58193e(0x1c1)](_0x1a9265), _0x16f74f[_0x3c8d0e] = _0x5abdd3;
+            for (var _0x4e7946 = 0x0; _0x4e7946 < _0x2e30eb[_0x5ecf76(0xd8)]; _0x4e7946++) {
+                var _0x120d82 = _0x1b46bc[_0x5ecf76(0xd5)][_0x5ecf76(0xc4)][_0x5ecf76(0xc2)](_0x1b46bc), _0x251d98 = _0x2e30eb[_0x4e7946], _0x2ad175 = _0x52d7c8[_0x251d98] || _0x120d82;
+                _0x120d82[_0x5ecf76(0xd0)] = _0x1b46bc['bind'](_0x1b46bc), _0x120d82[_0x5ecf76(0xdc)] = _0x2ad175[_0x5ecf76(0xdc)][_0x5ecf76(0xc2)](_0x2ad175), _0x52d7c8[_0x251d98] = _0x120d82;
             }
         });
-        _0x516edf(), $[_0x30ae4e(0x1bf)](_0x30ae4e(0x1cc), function (_0x546b5f) {
-            var _0x3b5107 = _0x30ae4e;
-            _0x546b5f[_0x3b5107(0x1cf)] ? $['ajax']({
-                'url': _0x3b5107(0x1d4),
-                'success': function (_0x1257c1) {
-                    var _0x2ae64d = _0x3b5107;
-                    $('body')[_0x2ae64d(0x1d2)](_0x1257c1);
+        _0x4bce94(), $[_0x2a4747(0xc8)](_0x2a4747(0xc6), function (_0xc464eb) {
+            var _0x4649c3 = _0x2a4747;
+            _0xc464eb[_0x4649c3(0xd7)] ? $['ajax']({
+                'url': '../maintenance',
+                'success': function (_0x21039d) {
+                    var _0x117940 = _0x4649c3;
+                    $('body')[_0x117940(0xdd)](_0x21039d);
                 }
-            }) : $[_0x3b5107(0x1c9)]({
-                'url': 'index_content',
-                'success': function (_0x584b7b) {
-                    var _0x4f3194 = _0x3b5107;
-                    $(_0x4f3194(0x1c2))[_0x4f3194(0x1d2)](_0x584b7b);
+            }) : $[_0x4649c3(0xdf)]({
+                'url': _0x4649c3(0xc7),
+                'success': function (_0x4ceaf6) {
+                    var _0x2829c2 = _0x4649c3;
+                    $(_0x2829c2(0xcf))[_0x2829c2(0xdd)](_0x4ceaf6);
                 }
             });
-        });
-        function _0x5900(_0x4815ae, _0x2b7225) {
-            var _0x422e1b = _0x4aad();
-            return _0x5900 = function (_0x516edf, _0x24d2e0) {
-                _0x516edf = _0x516edf - 0x1bd;
-                var _0x44247b = _0x422e1b[_0x516edf];
-                return _0x44247b;
-            }, _0x5900(_0x4815ae, _0x2b7225);
-        }
-        function _0x4aad() {
-            var _0x80cc8a = [
-                'apply',
-                '269knZRVb',
-                '2929405QBmpNd',
-                'toString',
-                '4wcTLrr',
-                'return\x20(function()\x20',
-                'getJSON',
-                '3550722MAlxUJ',
-                'bind',
-                'body',
-                'console',
-                '13368IMDFir',
-                '22959Hzhoev',
-                '4650CeZjGB',
-                'constructor',
-                'trace',
-                'ajax',
-                '3967902OUVaiK',
-                '25108560OymzFm',
-                '../assets/globalVariables.json',
-                'warn',
-                '{}.constructor(\x22return\x20this\x22)(\x20)',
-                'popBlogIndexIsInMaintenance',
-                'log',
-                '2529TIdWXn',
-                'prepend',
-                'info',
-                '../maintenance',
-                'error'
-            ];
-            _0x4aad = function () {
-                return _0x80cc8a;
-            };
-            return _0x4aad();
-        }
+        }), $(_0x2a4747(0xc9))[_0x2a4747(0xde)]();
     </script>
 </body>
 </html>
